<resources>
    <string name="app_name">FitBoi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--   Main Page -->
    <string name="test_main_page_daily_fact">Daily Nutrition Fact: An apple a day keeps the
        doctor away</string>
    <string name="main_page_call_to_action">Check Out Your Progress Today!</string>
    <string name="main_page_calories_consumed">Calories Consumed</string>
    <string name="test_main_page_calories_consumed_data">1240</string>
    <string name="test_main_page_calories_remaining_data">1320</string>
    <string name="main_page_calories_remaining">Calories Remaining</string>
    <string name="main_page_macro_distribution">Macro-based Calories Distribution</string>
    <string name="signup_create_account">Start by creating your account</string>
    <string name="signup_hint_firstname">First Name</string>
    <string name="signup_hint_lastname">Last Name</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_retypepassword">Retype Password</string>
    <string name="signup_continue1">Continue</string>
    <string name="signup_step_1">Step 1</string>
    <string name="signup_yes">YES</string>
    <string name="signup_no">NO</string>
    <string name="signup3_continue">Continue</string>
    <string name="signup_settinggoals">Get Started By Setting Your Goals!</string>
    <string name="signup_step_3">Step 3</string>
    <string name="signup_maintain_current_weight">Want to maintain your current weight?</string>
    <string name="signup_build_or_lose_weight">Are you looking to build or lose weight?</string>
    <string name="signup_weight_gain_loss_goal">What is your weight gain/loss goal?</string>
    <string name="signup_timeline_for_your_goal">Specify a timeline for your goal!</string>
    <string name="signup_date_yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="signup_more_about_yourself">Tell us more about yourself!</string>
    <string name="signup_hint_height">Height (in meters)</string>
    <string name="signup_step_2">Step 2</string>
    <string name="signup_hint_weight_in_kilograms">Weight (in kilograms)</string>
    <string name="signup2_continue">Continue</string>
    <string name="signup_male">Male</string>
    <string name="signup_female">Female</string>
    <string name="signup_weight">Weight</string>
    <string name="signup_date_of_birth">Date of birth?</string>
    <string name="signup_active_would_you_say_you_are">How active would you say you are?</string>
    <string name="addmeal_press_on_the_search_icon">Press on the search icon to look for a food</string>
    <string name="greeting_message_under_profile_pic">Hi, Michel</string>
    <string name="edit_profile_page_title">Edit Profile</string>
    <string name="actvity_factor_change_prompt">Current Activity Factor</string>
    <string name="goal_completion_progress_bar_msg">Current Goal Completion</string>
</resources>
